--- a/src/main/webapp/templates/main-page.html
+++ b/src/main/webapp/templates/main-page.html
@@ -8,21 +8,85 @@
     <title>Document</title>
     <link rel="stylesheet" href="../css/bootstrap-4.1.3/css/bootstrap.min.css"
           th:href="@{/css/bootstrap-4.1.3/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" href="../css/main-page.css" th:href="@{/css/main-page.css}"/>
 </head>
-<body>
-<header>
-
-</header>
-<div class="container-fluid">
-<div class="row">
-    <div class="col-xs-12 col-md-4">
-
-    </div>
-    <div class="col-xs-12 col-md-8">
-
-    </div>
-</div>
-</div>
+<body ng-app="sampleData">
+    <header>
+        <div class="pre-search-group">
+            <div class="profile-actions">
+                <a href="#" class="profile-action">Sign In</a> |
+                <a href="#" class="profile-action">Sign Up</a>
+            </div>
+        </div>
+        <div>
+            <div class="search-group">
+                <div>
+                    <input id="search" class="custom-input" type="text"/>
+                </div>
+                <div class="search-button">
+                    <div id="search-icon">
+                        <img src="../res/search-icon.png"
+                             th:src="@{/res/search-icon.png}" alt="search"/>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main>
+        <div id="open-filters">
+            >
+        </div>
+        <div id="filters-section">
+            <div class="filters">
+                <div class="filter">
+                    <div class="filter-name">
+                        Average Rating
+                        <span class="filter-caret" data-filter-caret-id="1">
+                            +
+                        </span>
+                    </div>
+                    <div class="filter-values " data-filter-binding-id="1"></div>
+                </div>
+            </div>
+        </div>
+        <div id="results">
+            <div id="found-books" ng-controller="SampleDataController">
+                <ul class="items">
+                    <li class="item item-thumbnail-wrapper" ng-repeat="book in books">
+                        <div class="item-thumbnail">
+                            <div class="book-cover">
+                                <a href="{{book.url}}">
+                                    <img ng-src="{{book.imageUrl}}" src="" alt=""/>
+                                </a>
+                            </div>
+                            <div class="item-attributes">
+                                <div class="item-attribute book-title">
+                                    <a href="{{book.url}}">
+                                        {{book.title}}
+                                    </a>
+                                </div>
+                                <div class="item-attribute book-authors">
+                                    <div class="book-author" ng-repeat="author in book.authors">
+                                        <a href="{{author.url}}" class="book-author">
+                                            {{author.firstName}} {{author.lastName}}
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="item-attribute">
+                                    Rating:
+                                    <span class="book-rating {{getClassNameForRating(book.averageRating)}}">
+                                    {{book.averageRating}}
+                                </span>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </main>
 </body>
 <script src="../js/angular.min.js" th:src="@{/js/angular.min.js}"></script>
+<script src="../js/jquery.min.js" th:src="@{/js/jquery.min.js}"></script>
+<script src="../js/angularSample.js"></script>
 </html>
