--- a/src/main/webapp/css/main-page.css
+++ b/src/main/webapp/css/main-page.css
@@ -2,6 +2,10 @@ body {
     background-color: rgb(252, 252, 252);
 }
 
+h1, h2, h3, h4, h5, h6 {
+    color: rgb(75, 75, 75);
+}
+
 header {
     padding-top: 10px;
     padding-bottom: 10px;
@@ -170,6 +174,12 @@ main {
 .book-author:hover {
     text-decoration: none;
     color: rgb(40, 40, 40);
+}
+
+.not-rated {
+    font-size: 1em!important;
+    font-weight: normal;
+    color: rgb(90, 90, 90);
 }
 
 .red {
