#10 almost implemented filtering

--- a/src/main/webapp/templates/main-page.html
+++ b/src/main/webapp/templates/main-page.html
@@ -20,8 +20,8 @@
         </div>
         <div>
             <div class="search-group">
-                <div>
-                    <input id="search" class="custom-input" type="text"/>
+                <div data-filter data-filter-name="title">
+                    <input id="search" class="custom-input" type="text" data-filter-binding="name"/>
                 </div>
                 <div class="search-button">
                     <div id="search-icon">
