--- a/src/main/webapp/templates/main-page.html
+++ b/src/main/webapp/templates/main-page.html
@@ -188,5 +188,6 @@
 <script src="../js/angular.min.js" th:src="@{/js/angular.min.js}"></script>
 <script src="../js/jquery.min.js" th:src="@{/js/jquery.min.js}"></script>
 <script src="../js/util.js" th:src="@{/js/util.js}"></script>
+<script th:src="@{/js/shared.js}" src="../js/shared.js"></script>
 <script src="../js/main-page.js" th:src="@{/js/main-page.js}"></script>
 </html>
