--- a/src/main/webapp/css/common.css
+++ b/src/main/webapp/css/common.css
@@ -1,3 +1,102 @@
+img {
+    width: 100%;
+    height: 100%;
+}
+
+#logout {
+    color: rgb(75, 75, 75);
+}
+
+#logout:hover {
+    cursor: pointer;
+    text-decoration: underline;
+}
+
 .hidden {
     display: none;
+}
+
+.logged-in-header {
+    font-size: 18px;
+    line-height: 1.8;
+    min-height: 40px;
+    word-break: break-word;
+}
+
+.header-grid {
+    display: grid;
+    grid-template-columns: 70% 29%;
+    background-color: rgb(240, 240, 240);
+    grid-column-gap: 1%;
+    height: 100%;
+    padding: 0 20px 0 20px;
+    margin-bottom: 20px;
+}
+
+.header-user {
+    display: grid;
+    grid-template-columns: 70% 30%;
+    height: 100%;
+}
+
+.profile-actions {
+    float: right;
+    font-size: 24px;
+    line-height: 24px;
+}
+
+.pre-search-group {
+    min-height: 40px;
+    background-color: rgb(240, 240, 240);
+    margin-bottom: 20px;
+}
+
+.search-group {
+    max-width: 800px;
+    display: grid;
+    margin: 0 auto;
+    grid-template-columns: auto 50px;
+}
+
+.hidden {
+    display: none;
+}
+
+.search-group:last-child {
+    background-color: rgb(240, 240, 240);
+    border: 1px solid rgb(230, 230, 230);
+    border-top-right-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+
+.profile-action {
+    color: rgb(80, 80, 80);
+}
+
+.profile-action:hover {
+    text-decoration: none;
+    color: rgb(40, 40, 40);
+}
+
+.logo {
+    min-width: 150px;
+}
+
+.custom-input {
+    height: 40px;
+    width: 100%;
+    font-size: 20px;
+    font-family: Helvetica;
+    color: rgb(60, 60, 60);
+    padding: 5px;
+    border: 0;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+
+.search-button {
+    background-color: rgb(240, 240, 240);
+    border: 1px solid rgb(230, 230, 230);
+    border-top-right-radius: 4px;
+    border-bottom-left-radius: 4px;
 }
