--- a/src/main/webapp/templates/main-page.html
+++ b/src/main/webapp/templates/main-page.html
@@ -9,29 +9,17 @@
     <link rel="stylesheet" href="../css/bootstrap-4.1.3/css/bootstrap.min.css"
           th:href="@{/css/bootstrap-4.1.3/css/bootstrap.min.css}"/>
     <link rel="stylesheet" href="../css/main-page.css" th:href="@{/css/main-page.css}"/>
+    <link rel="stylesheet" href="../css/common.css" th:href="@{/css/common.css}"/>
 </head>
 <body ng-app="main-page" ng-controller="BooksController">
-    <header th:replace="fragments/header :: header">
-        <div class="pre-search-group">
-            <div class="profile-actions">
-                <a href="#" th:href="${authorizationUrl}" class="profile-action">Sign In</a> |
-                <a href="#" th:href="${registrationUrl}" class="profile-action">Sign Up</a>
-            </div>
-        </div>
-        <div>
-            <div class="search-group">
-                <div data-filter data-filter-name="title">
-                    <input id="search" class="custom-input" type="text" data-filter-binding="name"/>
-                </div>
-                <div class="search-button">
-                    <div id="search-icon">
-                        <img src="../res/search-icon.png"
-                             th:src="@{/res/search-icon.png}" alt="search"/>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
+<th:block th:switch="${email == null}">
+    <div th:case="true">
+        <header th:replace="fragments/header :: header"></header>
+    </div>
+    <div th:case="false">
+        <header th:replace="fragments/logged-in-search :: header"></header>
+    </div>
+</th:block>
     <main>
         <!--<div id="open-filters">-->
             <!--&gt;-->
