--- a/src/main/webapp/css/main-page.css
+++ b/src/main/webapp/css/main-page.css
@@ -13,7 +13,7 @@ header {
 
 main {
     display: grid;
-    grid-template-columns: 250px 980px;
+    grid-template-columns: 250px auto;
     grid-column-gap: 30px;
     margin-bottom: 50px;
 }
@@ -42,6 +42,8 @@ main {
     display: inline-block;
     padding-right: 10px;
     max-width: 980px;
+    margin: 0 auto;
+    padding-top: 15px;
 }
 
 #filters-section {
