--- a/src/main/webapp/templates/book-view.html
+++ b/src/main/webapp/templates/book-view.html
@@ -10,14 +10,15 @@
           th:href="@{/css/bootstrap-4.1.3/css/bootstrap.min.css}"/>
     <link rel="stylesheet" href="../css/common.css" th:href="@{/css/common.css}">
     <link rel="stylesheet" href="../css/book-view.css" th:href="@{/css/book-view.css}">
+    <script src="../js/util.js" th:src="@{/js/util.js}"></script>
 </head>
 <body>
 <th:block th:switch="${email == null}">
     <th:block th:case="true">
-        <header th:replace="fragments/header-no-search :: header"></header>
+        <header th:replace="fragments/header :: header"></header>
     </th:block>
     <th:block th:case="false">
-        <header th:replace="fragments/logged-in"></header>
+        <header th:replace="fragments/logged-in :: header"></header>
     </th:block>
 </th:block>
 <main class="container" ng-app="bookPage" ng-controller="BookController">
@@ -60,10 +61,29 @@
                 <h6 class="font-weight-bold">Download</h6>
                 <ul id="download-list">
                     <li ng-repeat="format in book.formats">
-                        <a class="download-link" href="{{format.url}}">Download {{format.value}}</a>
+                        <span class="download-link" data-file-url="{{format.url}}"
+                              data-instance-id="{{format.instanceId}}"
+                              data-fomat="{{format.value}}"
+                              ng-click="download($event)">Download {{format.value}}</span>
                     </li>
                 </ul>
             </div>
+            <th:block th:if="${email != null}">
+                <h6 class="font-weight-bold">Rate this book</h6>
+                <div class="book-set-rating">
+                    <span class="rating" data-rating-value="1">1</span>
+                    <span class="rating" data-rating-value="2">2</span>
+                    <span class="rating" data-rating-value="3">3</span>
+                    <span class="rating" data-rating-value="4">4</span>
+                    <span class="rating" data-rating-value="5">5</span>
+                    <span class="rating" data-rating-value="6">6</span>
+                    <span class="rating" data-rating-value="7">7</span>
+                    <span class="rating" data-rating-value="8">8</span>
+                    <span class="rating" data-rating-value="9">9</span>
+                    <span class="rating" data-rating-value="10">10</span>
+                </div>
+                <script src="../js/rating.js" th:src="@{/js/rating.js}"></script>
+            </th:block>
         </div>
     </div>
 </main>
@@ -71,7 +91,6 @@
 <span class="hidden" id="book-id" th:text="${book.base.id}">16</span>
 <script src="../js/angular.min.js" th:src="@{/js/angular.min.js}"></script>
 <script src="../js/jquery.min.js" th:src="@{/js/jquery.min.js}"></script>
-<script src="../js/util.js" th:src="@{/js/util.js}"></script>
 <script src="../js/shared.js" th:src="@{/js/shared.js}"></script>
 <script th:src="@{/js/book.js}" src="../js/book.js"></script>
 </html>
