--- a/src/main/webapp/css/common.css
+++ b/src/main/webapp/css/common.css
@@ -3,13 +3,45 @@ img {
     height: 100%;
 }
 
-#logout {
-    color: rgb(75, 75, 75);
+input {
+    background-color: white;
+}
+
+input[type="checkbox"] {
+    background-color: white;
+}
+
+header {
+    display: grid;
+    grid-template-columns: 230px auto;
+    padding: 0px 15px 0px 15px;
+    min-height: 40px;
+    background-color: #355c7d;
+    box-shadow: 0px 0 3px rgb(200, 200, 200);
+    border-bottom: 3px solid #588dcc;
+    margin-bottom: 5px;
+    color: white;
+    line-height: 40px;
+    font-size: 17pt;
 }
 
 #logout:hover {
     cursor: pointer;
     text-decoration: underline;
+}
+
+#weblib {
+    color: white;
+}
+
+#weblib-wrapper {
+    text-align: center;
+}
+
+#weblib:hover {
+    text-decoration: none;
+    color: rgb(230, 230, 230);
+    cursor: pointer;
 }
 
 .hidden {
@@ -40,9 +72,8 @@ img {
 }
 
 .profile-actions {
-    float: right;
-    font-size: 24px;
-    line-height: 24px;
+    text-align: right;
+    padding-right: 15px;
 }
 
 .pre-search-group {
@@ -61,20 +92,14 @@ img {
     display: none;
 }
 
-.search-group:last-child {
-    background-color: rgb(240, 240, 240);
-    border: 1px solid rgb(230, 230, 230);
-    border-top-right-radius: 4px;
-    border-bottom-left-radius: 4px;
-}
 
 .profile-action {
-    color: rgb(80, 80, 80);
+    color: white;
 }
 
 .profile-action:hover {
     text-decoration: none;
-    color: rgb(40, 40, 40);
+    color: rgb(230, 230, 230);
 }
 
 .logo {
@@ -88,14 +113,19 @@ img {
     font-family: Helvetica;
     color: rgb(60, 60, 60);
     padding: 5px;
-    border: 0;
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
+    border: 1px solid rgb(230, 230, 230);
+    border-bottom-left-radius: 2px;
+    border-top-left-radius: 2px;
 }
 
 .search-button {
-    background-color: rgb(240, 240, 240);
+    background-color: rgb(245, 245, 245);
     border: 1px solid rgb(230, 230, 230);
     border-top-right-radius: 4px;
-    border-bottom-left-radius: 4px;
+    height: 40px;
+}
+
+.search-button:hover {
+    background-color: rgb(250, 250, 250);
+    cursor: pointer;
 }
