--- a/src/main/webapp/css/main-page.css
+++ b/src/main/webapp/css/main-page.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(249, 249, 249);
+    background-color: rgb(251, 251, 251);
     min-width: 768px;
 }
 
@@ -7,8 +7,20 @@ h1, h2, h3, h4, h5, h6 {
     color: rgb(75, 75, 75);
 }
 
-header {
-    padding-bottom: 10px;
+
+footer {
+    border-top: 5px solid #121720;
+    background-color: #244158;
+    min-height: 200px;
+    padding: 15px;
+    color: white;
+    font-size: 20pt;
+    text-align: center;
+}
+
+img {
+    width: 100%;
+    height: 100%;
 }
 
 main {
@@ -42,6 +54,7 @@ main {
     display: inline-block;
     padding-right: 10px;
     max-width: 980px;
+    width: 100%;
     margin: 0 auto;
     padding-top: 15px;
 }
@@ -129,11 +142,13 @@ main {
 .navigation-control {
     display: inline-block;
     margin: 5px;
-    font-size: 18px;
+    font-size: 18pt;
+    color: rgb(30, 30, 30);
 }
 
 .navigation-control:hover {
     cursor: pointer;
+    text-decoration: underline;
 }
 
 .item-attributes {
@@ -144,12 +159,11 @@ main {
     flex-direction: row;
     flex-wrap: wrap;
     list-style: none;
-    text-align: center;
+    text-align: left;
     padding: 15px;
 }
 
 .item {
-    display: inline-block;
     margin: 5px 10px 10px 5px;
 }
 
@@ -167,6 +181,7 @@ main {
     background-color: rgb(255, 255, 255);
     border-radius: 1px;
     border: 1px solid rgb(240, 240, 240);
+    box-shadow: 0px 0px 1px rgb(230, 230, 230);
 }
 
 .item-thumbnail {
@@ -227,7 +242,8 @@ main {
 
 .filters-header {
     padding: 5px;
-    background-color: rgb(240, 240, 240);
+    background-color: rgb(245, 245, 245);
+    box-shadow: 0px 0px 3px rgb(200, 200, 200);
     text-align: center;
     font-size: 24px;
 }
@@ -251,7 +267,7 @@ main {
 .filter-values {
     padding: 5px 5px 5px 15px;
     color: rgb(60, 60, 60);
-    font-size: 1.1em;
+    font-size: 11pt;
 }
 
 .rating-range {
