--- a/src/main/webapp/templates/book-view.html
+++ b/src/main/webapp/templates/book-view.html
@@ -14,11 +14,23 @@
 </head>
 <body>
 <th:block th:switch="${email == null}">
-    <th:block th:case="true">
+    <th:block th:case="true" class="hidden">
         <header th:replace="fragments/header :: header"></header>
     </th:block>
     <th:block th:case="false">
-        <header th:replace="fragments/logged-in :: header"></header>
+        <header th:replace="fragments/logged-in :: header">
+            <div id="weblib-wrapper">
+                <a id="weblib">WebLib</a>
+            </div>
+            <div class="header-user">
+                <div class="text-center">
+                    Welcome, <span class="font-weight-bold" th:text="${email}">user</span>
+                </div>
+                <div class="font-weight-bold text-right" id="logout">
+                    Log Out
+                </div>
+            </div>
+        </header>
     </th:block>
 </th:block>
 <main class="container" ng-app="bookPage" ng-controller="BookController">
